crates/keron-lang/tests/corpus/errors/parse/match_arm_missing_arrow.keron
val x: Int = match 1 {
  1 1,
  _ => 0,
}
